--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -3,11 +3,14 @@
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:orientation="horizontal"
+
               android:gravity="center">
     <ImageView
             android:id="@+id/iv_photo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/image_bg"
             android:scaleType="fitXY"/>
     <TextView
             android:id="@+id/file_name"
@@ -17,6 +20,7 @@
             android:gravity="left|center"
             android:text="TEST"
             android:textColor="@color/black"
+
             android:textSize="18sp"/>
 
 
