--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,11 @@
                 android:id="@+id/lv_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:dividerHeight="8dp"
-                android:divider="@color/null_color"/>
+                android:divider="@color/null_color"
+                android:scrollbars="none"/>
 
         <TextView
                 android:id="@+id/progress_circular"
