相册 ·图片集成框架有Glide ·使用XXPermisson权限请求框架 ·优化加载速度 8.28 待完成： ·DCIM全扫描； ·优化加载速度； ·添加手势缩放等操作 ·图片详情信息 ·图片增删更新

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="null_color">#00000000</color>
+    <color name="not_so_dark">#A4000000</color>
+    <color name="not_so_white">#9FFFFFFF</color>
 </resources>
