--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,23 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:fitsSystemWindows">true</item>
     </style>
+    <style name="Theme.Gallery.SingleImage" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="colorPrimary">@color/white</item>
+        <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+        <!--        <item name="android:windowTranslucentStatus">true</item>-->
+        <!--        <item name="statusBarBackground">@color/white</item>-->
+        <!--        <item name="statusBarForeground">@color/white</item>-->
+        <!--        <item name="statusBarScrim">@color/white</item>-->
+<!--        <item name="android:windowLightStatusBar">true</item>-->
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
 </resources>
