扫描DCIM及第一层文件夹里的图片

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
     <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="20dp"
             android:text="图库"
             android:textSize="50sp"
             android:textColor="@color/black"/>
@@ -24,7 +23,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
                 android:dividerHeight="8dp"
                 android:divider="@color/null_color"
                 android:scrollbars="none"/>
