--- a/app/src/main/res/layout/activity_single_image.xml
+++ b/app/src/main/res/layout/activity_single_image.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="30dp"
             android:layout_centerInParent="true"
             android:layout_alignParentTop="true"
-            android:gravity="left|center"
+            android:gravity="center"
             android:visibility="visible"
             android:singleLine="true"
             android:paddingHorizontal="10dp"
