--- a/app/src/main/res/layout/activity_single_image.xml
+++ b/app/src/main/res/layout/activity_single_image.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black"
-            android:scaleType="matrix"/>
+            android:scaleType="center"/>
     <TextView
             android:id="@+id/tv_title"
             android:layout_width="300dp"
